fix: clean up imports and update library dependencies